src/test/deca/context/invalid/test_bad_parameters2.deca
// Description:
//    Programme testant un appel de methode incorrect
//	  Etape(s) : A, B 
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
//
// Resultats:
//    erreur ligne 22 ( nombre de paramètres données incorrect)
//
// Historique:
//    cree le 21/01/2021

class A  {
	protected int x ;
	void setX(int c){
		this.x = c;
	}
}
{
	A a = new A();	
	a.setX();
}
